objects/AcctSeed__Bank_Deposit__c.object
<CustomObject>
    <description>Used to aggregate cash receipt records for use in the bank reconciliation process.</description>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The aggregate amount of all associated cash receipts.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The bank account which will be associated with this bank deposit. Only cash receipts associated with this bank account will be associated with this bank deposit.</inlineHelpText>
        <label>Bank Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Id__c</fullName>
        <externalId>true</externalId>
        <label>Bank Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated bank reconciliation this bank deposit was cleared.</inlineHelpText>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation2__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Transaction</label>
        <referenceTo>AcctSeed__Bank_Transaction__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Date__c</fullName>
        <inlineHelpText>The date this bank deposit was cleared in the associated bank reconciliation.</inlineHelpText>
        <label>Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Deposit_Date__c</fullName>
        <inlineHelpText>The date of the bank deposit.</inlineHelpText>
        <label>Deposit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Deposit_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Associated reference or description for the bank deposit.</inlineHelpText>
        <label>Deposit Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Bank Deposits (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Bank_Deposits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Bank Deposits (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Bank_Deposits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bank Deposit</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Deposit_Date__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Bank_Reconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Bank Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>